# Politecnico_Malvinas-Proyecto_ML

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
data/processed/: datos_limpios.csv  datos_procesados.csv  produccion_simulada_eolica.csv
data/raw/: boletin_2016_01-2024_08.xlsx  scraping.ipynb  scraping.py
docs/: mkdocs.yml
docs/docs/: README.md  index.md
notebooks/: 01_datos_cargados.ipynb  02_datos_analisis.ipynb  02_datos_limpios.ipynb  03_analisis_exploratorio.ipynb  03_datos_eolicos_simulados.ipynb  04_modelo.ipynb  04_modelos.ipynb  1-exploracion_inicial_de_datos.ipynb  README.md
prediccion_eolica/: features.py  plots.py
prediccion_eolica/modeling/: train.py
src/: __init__.py  dataset.py
src/modeling/: predict.py
